<resources>
    <string name="app_name">Evermind</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="DescriptionEvermindblack">EvermindBlack</string>
    <string name="DescriptionApp">Do it better</string>

    <string name="note_editor_activity">Note Editor</string>
    <string name="note_activity">Notes</string>
    <string name="menu_home">@string/app_name</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_note">com.example.Evermind.MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="NotesDescription">Notifications</string>
    <string name="NotesWrote">xupakuuuu</string>
</resources>