<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_quotes">

    <fragment
    android:id="@+id/nav_formatText"
    android:name="com.example.Evermind.ui.home.HomeFragment"
    android:label="@string/title_home"
    tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_quotes"
        android:name="com.example.Evermind.ui.dashboard.ui.main.NoteEditorFragmentJavaFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_note_creator" />

    <fragment
        android:id="@+id/nav_checkbox"
        android:name="com.example.Evermind.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_colors" />

    <fragment
        android:id="@+id/navigation_save"
        android:name="com.example.Evermind.ui.home.HomeFragment"
        android:label="Save"
        tools:layout="@layout/fragment_colors" />


    <fragment
        android:id="@+id/nav_grid"
        android:name="com.example.Evermind.ui.grid.ui.main.NotesScreen"
        android:label="Grid"
        tools:layout="@layout/home_screen_notes" />
    <action
        android:id="@+id/action_nav_grid_to_nav_note"
        app:destination="@id/nav_note"
        app:enterAnim="@anim/fade_in"
        app:exitAnim="@anim/fade_out_button" />

</navigation>